--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://scottcwilson.github.io/"
+baseurl = "https://scottcwilson.github.io/"
 languageCode = "en-us"
 title = "Scott C Wilson"
 theme = "aglaus2"
